--- a/.prettierignore
+++ b/.prettierignore
@@ -1,1 +1,13 @@
 {}
+# Игнорируется файл в любой директории проекта
+access.log
+
+# Игнорируется директория в любой директории проекта
+node_modules
+
+# Игнорируется каталог в корне рабочей директории
+/coverage
+
+# игнорировать все .txt файлы в каталоге doc/
+# на всех уровнях вложенности
+doc/**/*.txt
