--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "difference seeker",
-  "main": "index.js",
+  "main": "/bin/gendiff.js",
   "type": "module",
   "scripts": {
     "test": "gendiff"
@@ -23,7 +23,7 @@
     "lodash": "^4.17.21"
   },
   "bin": {
-    "gendiff": "bin/gendiff.js"
+    "gendiff": "./bin/gendiff.js"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
